--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>首页</title>
-    <link rel="stylesheet" href="./fonts2/iconfont.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <title>bookcity</title>
+    <link rel="stylesheet" href="/fonts2/iconfont.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/swiper-4.3.3.min.css">
 </head>
 
 <body>
+    <div class="wrap">
 
+    </div>
 </body>
+<script src="/js/libs/flexible.js"></script>
+<script src="/js/libs/require.js" data-main="/js/main.js"></script>
 
 </html>
